--- a/namebadges.tex
+++ b/namebadges.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper]{article}
 
 \usepackage[utf8]{inputenc}
-\usepackage[freepin,boxed]{ticket}
+\usepackage[freepin]{ticket}
 \usepackage{graphicx}
 \usepackage{geometry}
 \geometry{a4paper, left=0cm, top=0cm, bottom=0cm}
